DEV-Microk8s/influxDB_deployment/influxdb-clusterIP.yaml
# --- ClusterIP Service for InfluxDB ---
# Exposes InfluxDB internally within the Kubernetes cluster.
apiVersion: v1
kind: Service
metadata:
  name: influxdb-clusterip-svc # Name for the internal service
  namespace: default
  labels:
    app: influxdb
spec:
  type: ClusterIP # Default type, stable internal IP
  selector:
    app: influxdb # Selects Pods with the 'app: label'
  ports:
  - protocol: TCP
    port: 8086         # Port the service listens on
    targetPort: 8086 # Port number on the Pod to forward traffic to
