DEV-Microk8s/influxDB_deployment/influxdb-external.yaml
# MetalLB IP still required for ingestion of Logs from Proxmox Hosts.
# Better use case then having it all go threw ingress for the overhead.

apiVersion: v1
kind: Service
metadata:
  name: influxdb-external
  namespace: default 
spec:
  selector:
    app: influxdb # This label should match your Deployment's pod labels
  ports:
    - protocol: TCP
      port: 80       # External port for the Service (what you connect to)
      targetPort: 8086 # Internal port of the container deployment
      name: http
  type: LoadBalancer 
  loadBalancerIP: 10.105.105.16 #target IP for the service.
# test to see if can direct to container deployment without specifing the port.
