DEV-Microk8s/influxDB_deployment/influxdb-ingress.yaml
# Ingress yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  namespace: default # MUST match the namespace where your app's service lives
  annotations:
    # Specify the cert-manager resource
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - influxdb.dev.k8s.powersstudios.net # The URL you want to use
    # cert-manager will automatically create this Secret and store the certificate here
    secretName: influxdb-tls-secret 
  rules:
  - host: influxdb.dev.k8s.powersstudios.net # The URL you want to use
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: influxdb-clusterip-svc # The exact name of your app's ClusterIP service
            port:
              number: 8086 # The internal port your app uses
